# raman-tools

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  main.py  package.json  pyproject.toml  run_all_experiments.py  summary_report.py  tailwind.config.js  test_baseline.py  test_io.py  test_plotting.py
experiments/: 2025_07_09_passive_mba_epcam_mcf7.py  2025_07_09_passive_vs_dtssp.py  2025_07_17_skbr3_passive.py  2025_07_21_mcf7_passive.py  2025_08_01_linker_bare_vs_ag_coated.py  2025_08_14_bare_vs_ag_coated.py  2025_08_29_passive_ag_coated_fcr_rt.py  2025_09_01_passive_ag_coated_fcr_block.py  2025_09_23_rt_vs_37degrees.py  2025_11_04_mcf7_vs_skbr3.py  2025_11_06_skbr3_spiked_pbmc.py  2025_11_25_skbr3_vs_mcf7.py  2025_11_27_skbr3_vs_mcf7.py  2025_12_02_mda_231_vs_468.py  2025_12_03_mda_231_30minrt_15min37c.py  2025_12_04_mcf7_dtnb_epcam.py  2025_12_05_mcf7_double_coated_mba.py  2026_02_09_skbr3_singleplex_multiplex.py  2026_02_12_skbr3_mba_singleplex.py  2026_02_13_skbr3_mba_centrifugation.py  2026_02_17_skbr3_mba_fixed_cells.py  2026_02_19_mcf7_mba_fixed_cells.py  2026_02_25_mcf7_mba_fixed_cells.py  2026_03_02_mcf7_mba_fixed_cells.py  2026_03_04_mcf7_mba_epcam_tag_titration.py  2026_03_05_mcf7_mba_epcam_lod_cell_titrations.py  2026_03_10_mcf7_mba_epcam_lod.py  2026_03_19_mcf7_mba_epcam_lod.py  2026_03_19_mda231_mba_pdl1_epcam.py  2026_04_01_mcf7_skbr3_specificity.py  2026_06_03_mcf10a_mcf7_skbr3_mba_specificity.py  2026_06_04_mda_mb_231_mda_mb_468_mba_specificity.py  2026_07_03_mda_mb_231_mda_mb_468_tfmba_epcam_dtnb_pdl1.py  (+3 more)
(+72 files in other folders)
